# ThesisProject-T2I-DiT-Personalization

./: PROJECT_STRUCTURE.md
Orthogonalization-InstantX-IP-Adapter/: .gitignore  0719_experimental_design_memo.md  0723_experimental_design_memo.md  BATCH_MODAL_GUIDE.md  README.md  SOURCE_AWARE_MODAL_GUIDE.md  batch_client.py  batch_modal.py  create_comparison_grids.py  modal_inference.py  pyproject.toml  source_captions.json
Orthogonalization-InstantX-IP-Adapter/orthogonalization_instantx_ip_adapter/: __init__.py  adapter.py  attention_processor.py  batch_conditioning.py  batch_config.py  batch_manifest.py  config.py  implementation.py  inference.py  model_loader.py  orthogonalization.py  source_captions.py
Orthogonalization-InstantX-IP-Adapter/tests/: test_adapter.py  test_attention_processor.py  test_batch_client.py  test_batch_conditioning.py  test_batch_config.py  test_batch_manifest.py  test_implementation.py  test_orthogonalization.py  test_source_captions.py
Survey/: 0719_experimental_design_memo.md  Additional_Survey_0716.xlsx  Additional_Survey_0716_before_fill.xlsx
instantx_flux_ip_adapter/: LICENSE_NOTES.md  README.md  __init__.py  conditioning.py  config.py  inference.py  modal_inference.py  model_loader.py
shared/: __init__.py  modal_runtime.py
xlabs_flux_ip_adapter/: DATASET_NOTES.md  LICENSE_NOTES.md  README.md  __init__.py  conditioning.py  config.py  inference.py  modal_inference.py  model_loader.py
